--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,7 +1,7 @@
 .nav-bar {
-    background-color: white;
+    background-color: #B1E1FF;
     padding: 10px;
-    border: 3px solid;
+    border: 3px dashed;
     text-align: center;
     list-style-type: none;
 }
